# hubble-device-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  west-ncs.yml
.github/: SECURITY.md  auto_assign.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-docs.yaml  build-samples-esp-idf.yaml  reviewer.yaml  tests.yaml
.meta/: Hubble.component.js  Hubble.syscfg.js  hubble_radio.js  hubble_sdk_sources.c.xdt
.metadata/: product.json
docs/: Doxyfile  conf.py  index.rst
docs/_extensions/: kconfig_autodoc.py
docs/api/: ble.rst  core.rst  index.rst  satellite.rst
docs/architecture/: index.rst  project-organization.rst
docs/best-practices/: index.rst  pass-prediction.rst
docs/ble/: index.rst  timing.rst
docs/configuration/: index.rst
docs/integration_guides/ncs/: index.rst
docs/introduction/: index.rst
docs/quickstart/: index.rst
docs/quickstart/bare-metal/: index.rst
docs/quickstart/esp-idf/: index.rst
docs/quickstart/freertos/: index.rst
docs/quickstart/ti/: index.rst
docs/quickstart/zephyr/: index.rst
docs/releases/: 1.0.rst  index.rst
docs/satellite/: board-support.rst  index.rst
docs/security/: cryptography.rst
include/hubble/: ble.h  hubble.h  sat.h
include/hubble/port/: crypto.h  sat_radio.h  sys.h
include/hubble/sat/: dtm.h  ephemeris.h  pass_prediction.h
port/esp-idf/hubblenetwork-sdk/: Kconfig
port/freertos/: config.h  hubble_freertos.c  hubble_sat_freertos.c  hubblenetwork-sdk.mk
port/zephyr/: CMakeLists.txt  Kconfig  Kconfig.nrf  Kconfig.silabs  hubble_sat_zephyr.c  hubble_zephyr.c
port/zephyr/boards/nordic/nrf52/: CMakeLists.txt  nrf21540dk.c  nrf52_soc.c
port/zephyr/boards/nordic/nrf53/: CMakeLists.txt  nrf53_soc.c  thingy53.c
port/zephyr/boards/nordic/nrf54/: CMakeLists.txt  nrf54_soc.c  nrf54_soc_softdevice.c  nrf54l15dk.c
samples/esp-idf/ble-beacon/: README.md
samples/esp-idf/sat-continuous/: README.md
samples/esp-idf/sat-dtm/: CMakeLists.txt  README.md  sdkconfig.defaults
samples/zephyr/ble-beacon/: Kconfig  README.md  sync_time.py
samples/zephyr/ble-network/: README.md  provisioning-key.py
samples/zephyr/sat-continuous/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/zephyr/sat-continuous/src/: main.c
src/: hubble.c  hubble_ble.c  hubble_crypto.c  hubble_priv.h  hubble_sat.c  hubble_sat_ephemeris.c  hubble_sat_packet.c  hubble_sat_pass_prediction.c  reed_solomon_encoder.c
src/crypto/: mbedtls.c  psa.c
src/utils/: bitarray.c  bitarray.h
tools/: ble-adv.py  dual-stack-companion.py  embed_key_time.py  orbital_params_fetch.py  scan.py  validate.py
tools/ci/: esp-idf-build-manifest.yaml  summarize_footprint.py  summarize_footprint_esp_idf.py  ti_build.py  twister-quarantine.yaml
zephyr/: module.yml
(+80 files in other folders)
